fix anomalies in project